--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 
   VITE_API_URL=https://evisa-automation-server-git-main-mashayeakhs-projects.vercel.app
   VITE_image_key_api=b8d8d28c1142c000c511ee1be549022d
+  VITE_RECAPTCHA_SITE_KEY=6LdHWt4rAAAAAODKpjoukiQxZkVR7LWZXcDAlmFU
